# PDFNetWrappers

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Golang_Building_Guide.txt  LICENSE.txt  PHP_Building_Guide_for_Windows.txt  README.md  README.txt  README_RPATHS_MAC.md  README_RPATHS_MAC.txt  UpdateSamples.txt  build.py  fix_rpaths.sh  legal.txt  older_changelogs.html  whatsnew.html
.circleci/: config.yaml  config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_and_test.yaml  go_build_linux.yaml  go_build_linux_custom.yaml  go_build_mac.yaml  go_build_mac_custom.yaml  go_build_win.yaml  go_build_win_custom.yaml
Doc/PDFNetC/: _a_s_c_i_i85_encode_8h.html  _a_s_c_i_i85_encode_8h_source.html  _action_8h.html  _action_8h_source.html  _action_parameter_8h.html  _action_parameter_8h_source.html  _advanced_imaging_convert_options_8h.html  _advanced_imaging_convert_options_8h_source.html  _advanced_imaging_module_8h.html  _advanced_imaging_module_8h_source.html  _annot_8h.html  _annot_8h_source.html  _annots_8h.html  _annots_8h_source.html  _attr_obj_8h.html  _attr_obj_8h_source.html  _basic_types_8h.html  _basic_types_8h.js  _basic_types_8h_source.html  _bookmark_8h.html  _bookmark_8h_source.html  _byte_range_8h.html  _byte_range_8h_source.html  _c_a_d_convert_options_8h.html  _c_a_d_convert_options_8h_source.html  _c_a_d_module_8h.html  _c_a_d_module_8h_source.html  _callback_8h.html  _callback_8h_source.html  _caret_8h.html  _caret_8h_source.html  _char_data_8h.html  _char_data_8h.js  _char_data_8h_source.html  _check_box_widget_8h.html  _check_box_widget_8h_source.html  _circle_8h.html  _circle_8h_source.html  _class_map_8h.html  _class_map_8h_source.html  (+1129 more)
Doc/PDFNetC/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6a.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_67.js  classes_68.js  classes_69.js  classes_6a.js  classes_6b.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_6f.js  classes_70.js  (+131 more)
Doc/PDFNetJava/assets/: customizations.css  ga.js  navtree_data.js  search_autocomplete.js  style.css
Doc/PDFNetJava/reference/: classes.html  current.xml  hierarchy.html  lists.js  package-list  packages.html
Doc/images/: older_changelogs.html  tronsheet.css
PDFNetC/: .gitignore  README.txt
PDFNetPHP/: CMakeLists.txt  PDFNetPHP.i  PDFNetPHP.php  PDFNetUStringPHP.i  PDFNet_StdStringPHP.i  script.php
PDFNetPython/: CMakeLists.txt  PDFNetPython.i  PDFNetUStringPython2.i  PDFNetUStringPython3.i
PDFNetRuby/: CMakeLists.txt  PDFNetRuby.i  PDFNetUStringRuby.i
PDFTronGo/: CMakeLists.txt  README.md  build_go.py  go.mod  pdftron.i  pdftron_ustring.i
PDFTronGo/CI/Linux/: CI_Linux.sh
PDFTronGo/CI/Mac/: cleanupandupdate_bat.py
PDFTronGo/CI/Windows/: CI_Win.bat  replace.py
PDFTronGo/ci/mac/: CI_Mac.sh
PDFTronGo/ci/windows/: pdftron.go.replace  pdftron_wrap.cxx.replace  pdftron_wrap.h.replace
PDFTronGo/helper/: insertflags.go
Samples/: init.py  py_init.bat  py_init.sh  remove_non_python.sh  runall_go.bat  runall_go.sh  runall_php.bat  runall_php.sh  runall_py.py  runall_python.bat  runall_python.sh  runall_ruby.bat  runall_ruby.sh
Samples/AddImageTest/GO/: AddImageTest.go  AddImage_test.go  RunTest.bat  RunTest.sh
Samples/AddImageTest/PHP/: AddImageTest.php  RunTest.bat  RunTest.sh
Samples/AddImageTest/PYTHON/: AddImageTest.py  RunTest.bat  RunTest.sh
Samples/AddImageTest/RUBY/: AddImageTest.rb  RunTest.bat  RunTest.sh
Samples/AdvancedImagingTest/GO/: AdvancedImaging_test.go
Samples/AdvancedImagingTest/PHP/: AdvancedImagingTest.php  RunTest.bat  RunTest.sh
Samples/AdvancedImagingTest/PYTHON/: AdvancedImagingTest.py  RunTest.bat  RunTest.sh
Samples/AdvancedImagingTest/RUBY/: AdvancedImagingTest.rb  RunTest.bat  RunTest.sh
Samples/AnnotationTest/GO/: AnnotationTest.go  Annotation_test.go  RunTest.bat  RunTest.sh
Samples/AnnotationTest/PHP/: AnnotationTest.php  RunTest.bat  RunTest.sh
Samples/AnnotationTest/PYTHON/: AnnotationTest.py  RunTest.bat  RunTest.sh
Samples/AnnotationTest/RUBY/: AnnotationTest.rb  RunTest.bat  RunTest.sh
Samples/BarcodeTest/GO/: Barcode_test.go
Samples/BarcodeTest/PHP/: BarcodeTest.php  RunTest.bat  RunTest.sh
Samples/BarcodeTest/PYTHON/: BarcodeTest.py  RunTest.bat  RunTest.sh
Samples/BarcodeTest/RUBY/: BarcodeTest.rb  RunTest.bat  RunTest.sh
Samples/BookmarkTest/GO/: BookmarkTest.go  Bookmark_test.go  RunTest.bat  RunTest.sh
Samples/BookmarkTest/PHP/: BookmarkTest.php  RunTest.bat  RunTest.sh
Samples/BookmarkTest/PYTHON/: BookmarkTest.py  RunTest.bat  RunTest.sh
Samples/BookmarkTest/RUBY/: BookmarkTest.rb  RunTest.bat  RunTest.sh
Samples/CAD2PDFTest/GO/: CAD2PDFTest.go  CAD2PDF_test.go  RunTest.bat  RunTest.sh
Samples/CAD2PDFTest/PHP/: CAD2PDFTest.php  RunTest.bat  RunTest.sh
Samples/CAD2PDFTest/PYTHON/: CAD2PDFTest.py  RunTest.bat  RunTest.sh
Samples/CAD2PDFTest/RUBY/: CAD2PDFTest.rb  RunTest.bat  RunTest.sh
Samples/ContentReplacerTest/GO/: ContentReplacerTest.go  ContentReplacer_test.go  RunTest.bat  RunTest.sh
Samples/ContentReplacerTest/PHP/: ContentReplacerTest.php  RunTest.bat  RunTest.sh
Samples/ContentReplacerTest/PYTHON/: ContentReplacerTest.py  RunTest.bat  RunTest.sh
Samples/TestFiles/: Fishermen.docx  Font_licenses.txt  License.txt  SYH_Letter.docx  Stadsslot Berlijn 2014.dwg  apryse.cer  apryse.pfx  factsheet_Arabic.docx  find-replace-test_(en_to_fr).xlf  hindi_sample_utf16be.txt  my_stream.txt  pdftron.cer  pdftron.pfx  pdftron_smart_substitution.plugin  simple-excel_2007.xlsx  simple-text.txt  simple-word_2007.docx  tagged_(en_to_fr).xlf  the_rime_of_the_ancient_mariner.docx  wrap_poly_demo.docx
jenkinsfiles/: build_alpine_go.groovy  build_linux_arm_go.groovy  build_linux_go.groovy  build_mac_arm_go.groovy  build_mac_go.groovy  build_win_go.groovy
(+1045 files in other folders)
